# Dissertation

./: command.c  data.txt  data_fuzzy.txt  data_log.txt  data_pwm.txt  data_v0.txt  data_v1.txt
DE_algorithm/: DE.c
Document/: 2023.04.DCA.Phu luc 2.Mau bao cao.docx  Bao_cao_do_an_2.docx  Mau-bao-cao-tien-do-luan-van-50-HK-202.doc  math.wmf  thesis.wmf  ~$o_cao_do_an_2.docx  ~WRL0005.tmp
Firmware/bbb_firmware/: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Firmware/bbb_firmware/include/: main.h
Firmware/bbb_firmware/log/: latest_list
Firmware/bbb_firmware/pico/micro_ros_raspberrypi_pico_sdk/: README.md  available_ros2_types  built_packages  package.xml  pico_micro_ros_main.c
Firmware/bbb_firmware/pico/micro_ros_raspberrypi_pico_sdk/libmicroros/include/control_msgs/msg/detail/: admittance_controller_state__functions.h  mecanum_drive_controller_state__struct.h  steering_controller_status__struct.h
Firmware/bbb_firmware/src/battery/: CMakeLists.txt
Firmware/bbb_firmware/src/battery/include/battery/: battery.h
Firmware/bbb_firmware/src/battery/src/: battery.cpp
Firmware/bbb_firmware/src/buzzer/: CMakeLists.txt
Firmware/bbb_firmware/src/buzzer/include/buzzer/: buzzer.h
Firmware/bbb_firmware/src/buzzer/src/: buzzer.cpp
Firmware/bbb_firmware/src/config/: CMakeLists.txt
Firmware/bbb_firmware/src/config/include/config/: config.h
Firmware/bbb_firmware/src/config/src/: config.cpp
Firmware/bbb_firmware/src/display/: CMakeLists.txt
Firmware/bbb_firmware/src/display/include/display/: display.h
Firmware/bbb_firmware/src/display/src/: display.cpp
Firmware/bbb_firmware/src/fuzzy_controller/: CMakeLists.txt
Firmware/bbb_firmware/src/fuzzy_controller/include/fuzzy_controller/: fuzzy_controller.h
Firmware/bbb_firmware/src/fuzzy_controller/src/: fuzzy_controller.cpp
Firmware/bbb_firmware/src/led/: CMakeLists.txt
Firmware/bbb_firmware/src/led/include/led/: led.h
Firmware/bbb_firmware/src/led/src/: led.cpp
Firmware/bbb_firmware/src/ros_comm/: CMakeLists.txt
Firmware/bbb_firmware/src/ros_comm/include/ros_comm/: ros_comm.h
Firmware/bbb_firmware/src/ros_comm/src/: ros_comm.cpp
Firmware/bbb_firmware/src/scheduler/: CMakeLists.txt
Firmware/bbb_firmware/src/scheduler/include/scheduler/: scheduler.h
Firmware/bbb_firmware/src/scheduler/src/: scheduler.cpp
Firmware/bbb_firmware/src/speed_controller/: CMakeLists.txt
Firmware/bbb_firmware/src/speed_controller/include/encoder/: encoder.h  tempCodeRunnerFile.h
Firmware/bbb_firmware/src/speed_controller/include/motor_driver/: motor_driver.h
Firmware/bbb_firmware/src/speed_controller/include/speed_controller/: speed_controller.h
Firmware/bbb_firmware/src/speed_controller/include/uart_display/: uart_display.h
Firmware/bbb_firmware/src/speed_controller/include/velocity_converter/: velocity_converter.h
Firmware/bbb_firmware/src/speed_controller/src/: encoder.cpp  motor_driver.cpp  speed_controller.cpp  uart_display.cpp  velocity_converter.cpp
Firmware/bbb_firmware/src/state_machine/: CMakeLists.txt
Firmware/bbb_firmware/src/state_machine/include/state_machine/: state_machine.h
Firmware/bbb_firmware/src/state_machine/src/: state_machine.cpp
Firmware/pico/micro_ros_raspberrypi_pico_sdk/: CHANGELOG.rst  pico_uart_transport.c  pico_uart_transports.h
GUI/: mobile_robot.fig  mobile_robot.m  test_ICP.m
Hardware/: Module.xlsx
Hardware/Driver_motor_board/: Driver_motor.csv  Driver_motor.kicad_pcb  Driver_motor.kicad_prl  Driver_motor.kicad_pro  Driver_motor.kicad_sch  Driver_motor.xml  Hien_Nguyen_driver_board.rar  fp-info-cache
Hardware/Driver_motor_board/Hien_Nguyen_driver_board/: Driver_motor-B_Cu.gbr  Driver_motor-B_Mask.gbr  Driver_motor-B_Paste.gbr  Driver_motor-B_Silkscreen.gbr  Driver_motor-Edge_Cuts.gbr  Driver_motor-F_Cu.gbr  Driver_motor-F_Mask.gbr  Driver_motor-F_Paste.gbr  Driver_motor-F_Silkscreen.gbr  Driver_motor-job.gbrjob  Driver_motor.drl
Matlab_Simulink/: PID_control.mat  PID_control.slx  PI_Fuzzy.fis  PI_Fuzzy.slx  fomula.txt  untitled.m
Matlab_Simulink/Test TCP/: client.py  client.txt  client_v1.py  data.m
Matlab_Simulink/Test_lidar/: test_error.m
Matlab_Simulink/Trajectory_reference/: circle.m
Software/: .~lock.Localization and Perception.odp#  .~lock.Note_word.odt#  .~lock.note_mapping_navigation.odp#  Note_word.odt  Software_note.txt  note  note_mapping_navigation.odp  uROS.docx  uross.odp
Software/jeson/: main.cpp
install/: local_setup.sh  setup.sh
log/: latest_build
solidword_URDF/: CMakeLists.txt  package.xml
solidword_URDF/config/: joint_names_solidword_URDF.yaml
solidword_URDF/launch/: display.launch  gazebo.launch
solidword_URDF/meshes/: camera_link.STL  lidar_link.STL  wheel_left_back_link.STL  wheel_left_front_link.STL  wheel_right_back_link.STL  wheel_right_front_link.STL
solidword_URDF/urdf/: solidword_URDF.csv  solidword_URDF.urdf
src/bbb_package/: CMakeLists.txt  package.xml
src/bbb_package/config/: mapper_params_online_async.yaml
src/bbb_package/launch/: rplidar.launch.py  thesis.launch.py
src/bbb_package/src/: circumference_node.cpp  controllers_node.cpp  data_processing_node.cpp  data_processing_node_circle.cpp  data_processing_node_eight.cpp  data_processing_node_straight.cpp  data_processing_node_trap.cpp  data_processing_node_zz.cpp  delta_angle.cpp  delta_angle_node.cpp  fuzzy_longitudinal_controllers.cpp  fuzzy_node.cpp  fuzzy_node_test.cpp  lidar_tune.cpp  pid_node.cpp  read_IMU.cpp  read_host.cpp  read_lidar.cpp  read_pico.cpp  sinusoidal_node.cpp  stanley_node.cpp  straight_line_node.cpp  tune_fuzzy_node.cpp  tune_node.cpp
src/install/: local_setup.sh  setup.sh
src/install/bbb_robot/share/bbb_robot/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml  package.zsh
src/install/bbb_robot/share/bbb_robot/config/: main.rviz  mapper_params_online_async.yaml  my_controllers.yaml  twist_mux.yaml
src/install/bbb_robot/share/bbb_robot/launch/: launch_sim.launch.py  launch_toolbox.launch.py
src/log/: latest_build
src/tune_package/: CMakeLists.txt
(+346 files in other folders)
